small fix for white space when there is small amount of posts

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -32,6 +32,7 @@ p {
     .wrapper {
       max-width: 1920px;
       margin: 0 auto;
+      min-height: 100svh;
     }
   }
 }
